[project]
name = "fantopia-new-event-listener"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "html2text>=2025.4.15",
    "lark-oapi>=1.4.15",
    "openai>=1.77.0",
    "playwright>=1.52.0",
    "requests>=2.32.3",
    "schedule>=1.2.2",
]
